[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "creditcoin3-attestor-gossip"
publish.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
absurd_extreme_comparisons = "allow"
iter_next_slice = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
no_effect_underscore_binding = "allow"
type_complexity = "allow"

[dependencies]
anyhow = "1"
async-trait = { workspace = true }
attestation-chain = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = { workspace = true, default-features = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"], default-features = true }
starknet-crypto = { workspace = true }
thiserror = { workspace = true }
vrf = { workspace = true }
wasm-timer = { workspace = true }

# substrate
parity-scale-codec = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-network = { workspace = true, default-features = true }
sc-network-common = { workspace = true, default-features = true }
sc-network-gossip = { workspace = true, default-features = true }
sc-network-types = { workspace = true, default-features = true }
sc-utils = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }
sp-consensus-babe = { workspace = true, default-features = true }
sp-core = { workspace = true, features = [
    "serde",
    "full_crypto",
], default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
substrate-prometheus-endpoint = { workspace = true }

# Workspace
attestor-primitives = { workspace = true }
bls-signatures = { workspace = true, default-features = true }
randomness-primitives = { workspace = true, default-features = true }
supported-chains-primitives = { workspace = true, default-features = true }

[dev-dependencies]
env_logger = { workspace = true }
sc-network-test = { workspace = true, default-features = true }
