[package]
edition = "2021"
name = "creditcoin3-attestor-rpc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attestation-chain = { workspace = true }
creditcoin3-attestor-gossip = { path = "../attestor-gossip" }
jsonrpsee = { workspace = true, features = ["client-core", "server", "macros"] }
log = { workspace = true }
serde = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
