[package]
authors = { workspace = true }
edition = { workspace = true }
license = "GPL-3.0-only"
name = "creditcoin3-client-evm-tracing"
publish = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
ethereum-types = { workspace = true, features = ["std"] }
hex = { workspace = true, features = ["serde"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
# Tracing
creditcoin3-rpc-primitives-debug = { workspace = true, features = ["std"] }
evm-tracing-events = { workspace = true, features = ["std"] }

# Substrate
parity-scale-codec = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-std = { workspace = true, features = ["std"] }
