[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "block-prefetcher"
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full"] }
futures = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true, default-features = false }
tokio-util = { workspace = true, default-features = false }
tracing = { workspace = true }

# Common
eth = { workspace = true }

# Primitives
block-primitives = { workspace = true, features = ["threaded_sink"] }

# Encoding
ccnext-abi-encoding = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[features]
default = ["std"]
std = ["eth/std"]
